--- a/app/src/main/res/layout/row_list.xml
+++ b/app/src/main/res/layout/row_list.xml
@@ -40,9 +40,10 @@
 
         <TextView
 
+            android:id="@+id/status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Chapter 251"
+            android:text="Ongoing"
             android:textSize="13sp"
             android:textColor="#fff"
             android:textAlignment="viewEnd"
